# rk3576

./: .gitignore  README.md
camera_web_cpp_ws/: README.md  start_camera_web_cpp.sh  start_multi_camera_web_cpp.sh  start_rtsp_camera_web_cpp.sh  stop_camera_web_cpp.sh  stop_multi_camera_web_cpp.sh
camera_web_cpp_ws/src/camera_web_cpp/: CMakeLists.txt  README.md  package.xml
camera_web_cpp_ws/src/camera_web_cpp/include/camera_web_cpp/: camera_mjpeg_publisher.hpp  compressed_mjpeg_server.hpp  rtsp_mjpeg_publisher.hpp  runtime_shared_state.hpp
camera_web_cpp_ws/src/camera_web_cpp/launch/: camera_web_cpp.launch.py  multi_camera_web_cpp.launch.py  rtsp_camera_web_cpp.launch.py
camera_web_cpp_ws/src/camera_web_cpp/src/: camera_mjpeg_publisher.cpp  compressed_mjpeg_server.cpp  rtsp_mjpeg_publisher.cpp  runtime_shared_state.cpp
camera_web_ws/: README.md  start_camera_web.sh  stop_camera_web.sh
camera_web_ws/src/camera_web_bridge/: README.md  package.xml  setup.cfg  setup.py
camera_web_ws/src/camera_web_bridge/camera_web_bridge/: __init__.py  camera_publisher.py  mjpeg_server.py
camera_web_ws/src/camera_web_bridge/launch/: camera_web.launch.py
dm_h3510_ros_ws/: README.md
dm_h3510_ros_ws/cpp/: README.md
dm_h3510_ros_ws/cpp/src/dm_h3510_ros_cpp/: CMakeLists.txt  package.xml
dm_h3510_ros_ws/cpp/src/dm_h3510_ros_cpp/config/: dm_h3510_ros_cpp.yaml
dm_h3510_ros_ws/cpp/src/dm_h3510_ros_cpp/include/dm_h3510_ros_cpp/: dm_usb2canfd.hpp  gear_conversion.hpp
dm_h3510_ros_ws/cpp/src/dm_h3510_ros_cpp/launch/: dm_h3510_ros_cpp.launch.py
dm_h3510_ros_ws/cpp/src/dm_h3510_ros_cpp/src/: dm_h3510_ros_cpp_node.cpp  dm_usb2canfd.cpp
dm_h3510_ros_ws/cpp/src/dm_h3510_ros_cpp/test/: test_gear_conversion.cpp  test_initial_velocity_command.cpp
dm_h3510_ros_ws/cpp/src/gimbal_tracker/: CMakeLists.txt  README.md  package.xml
dm_h3510_ros_ws/cpp/src/gimbal_tracker/config/: gimbal_tracker.yaml
dm_h3510_ros_ws/cpp/src/gimbal_tracker/include/gimbal_tracker/: tracker_core.hpp
dm_h3510_ros_ws/cpp/src/gimbal_tracker/launch/: gimbal_tracker.launch.py
dm_h3510_ros_ws/cpp/src/gimbal_tracker/src/: gimbal_tracker_node.cpp  tracker_core.cpp
dm_h3510_ros_ws/cpp/src/gimbal_tracker/test/: test_tracker_core.cpp
dm_h3510_ros_ws/docs/: troubleshooting.md  yolo_gimbal_quickstart.md
dm_h3510_ros_ws/python/: README.md
dm_h3510_ros_ws/python/src/dm_h3510_ros_py/: package.xml  setup.cfg  setup.py
dm_h3510_ros_ws/python/src/dm_h3510_ros_py/config/: dm_h3510_ros_py.yaml
dm_h3510_ros_ws/python/src/dm_h3510_ros_py/dm_h3510_ros_py/: __init__.py  dm_h3510_ros_py_node.py  dm_usb2canfd.py
dm_h3510_ros_ws/python/src/dm_h3510_ros_py/launch/: dm_h3510_ros_py.launch.py
dm_h3510_ros_ws/scripts/board/: build_cpp_ros.sh  build_python_ros.sh  pub_position_once.sh  run_cpp_ros.sh  run_gimbal_tracker.sh  run_python_ros.sh  start_three_camera_yolo_gimbal.sh
dm_h3510_ros_ws/scripts/windows/: deploy_to_board.ps1
docs/: README.md  RK3576三路混合摄像头YOLO识别计划书.md  RK3576云台与YOLO联调计划书.md  RK3576多摄像头无人机识别计划书.md  artifacts.md  workspace-map.md  workspace-organization.md
docs/superpowers/plans/: 2026-05-19-workspace-low-risk-organization.md
docs/superpowers/specs/: 2026-05-19-workspace-low-risk-organization-design.md
drone_pt_detector/: README.md  requirements.txt
drone_pt_detector/models/: flying_objects_yolov8m.json
drone_pt_detector/scripts/: detect.ps1  download_dataset.ps1  download_model.ps1  export.ps1  prepare_drone_voc_dataset.ps1  prepare_drone_voc_dataset.py  setup_env.ps1  test_damoyolo_uav.ps1  train.ps1  validate.ps1
drone_pt_detector/src/: drone_pt_detector.py
drone_yolo_web_cpp_ws/: README.md
drone_yolo_web_cpp_ws/scripts/board/: start_drone_yolo_cpp_all.sh  start_drone_yolo_web_cpp.sh  stop_drone_yolo_cpp_all.sh  stop_drone_yolo_web_cpp.sh
drone_yolo_web_cpp_ws/scripts/windows/: start_drone_yolo_cpp_all.ps1  stop_drone_yolo_cpp_all.ps1
drone_yolo_web_cpp_ws/src/drone_yolo_web_cpp/: CMakeLists.txt  README.md  package.xml
drone_yolo_web_cpp_ws/src/drone_yolo_web_cpp/include/drone_yolo_web_cpp/: detection.hpp  http_overlay_server.hpp  json_utils.hpp  yolo11_rknn_detector.hpp  yolo_overlay_node.hpp
drone_yolo_web_cpp_ws/src/drone_yolo_web_cpp/launch/: drone_yolo_web_cpp.launch.py
drone_yolo_web_cpp_ws/src/drone_yolo_web_cpp/src/: drone_yolo_web_cpp_node.cpp  http_overlay_server.cpp  json_utils.cpp  yolo11_rknn_detector.cpp  yolo_overlay_node.cpp
drone_yolo_web_cpp_ws/src/vision_msgs/: package.xml
drone_yolo_web_cpp_ws/src/vision_msgs/msg/: ObjectHypothesisWithPose.msg
gimbal_dm_h3510_ws/: README.md
gimbal_dm_h3510_ws/config/: README.md  dm_h3510_pc_classic_can.json  pc_dm_h3510_example.json
gimbal_dm_h3510_ws/cpp_v1_1_smoke/: CMakeLists.txt
gimbal_dm_h3510_ws/cpp_v1_1_smoke/include/dm_h3510/: dm_h3510_controller.hpp  protocol.hpp  usb2canfd_device.hpp
gimbal_dm_h3510_ws/cpp_v1_1_smoke/src/: dm_h3510_controller.cpp  main.cpp  usb2canfd_device.cpp
gimbal_dm_h3510_ws/docs/: README.md  dm_h3510_engineering.md  pc_usb2canfd_smoke_test.md
gimbal_dm_h3510_ws/scripts/: README.md
gimbal_dm_h3510_ws/scripts/windows/: list_usb2canfd.ps1  probe_serial.ps1  run_cpp_v1_1_smoke.ps1  (+2 more)
gimbal_dm_h3510_ws/src/: README.md  pc_dm_h3510_smoke.py  serial_probe.py
rknn_yolo11/: README.md
rknn_yolo11/rknn_yolo11/: README.md
scripts/: README.md
scripts/windows/: start_camera_cpp.ps1  start_multi_camera_cpp.ps1  start_yolo_cpp.ps1  start_yolo_py.ps1  start_yolo_py_canvas.ps1  stop_camera_cpp.ps1  stop_multi_camera_cpp.ps1  stop_yolo_cpp.ps1  stop_yolo_py.ps1  stop_yolo_py_canvas.ps1  test_drone_pt.ps1  validate_drone_datasets.ps1
tools/: rk3576_aggregate_server.py
yolo_web_cpp_ws/: README.md
yolo_web_py_canvas_ws/: README.md
yolo_web_py_canvas_ws/src/vision_msgs/: CMakeLists.txt
yolo_web_py_canvas_ws/src/vision_msgs/msg/: Pose2D.msg
yolo_web_py_ws/: README.md
yolo_web_py_ws/src/yolo_web_py/: package.xml  setup.cfg  setup.py
yolo_web_py_ws/src/yolo_web_py/launch/: yolo_web_py.launch.py
yolo_web_py_ws/src/yolo_web_py/yolo_web_py/: __init__.py  yolo_web_py_node.py
(+44 files in other folders)
