<?xml version="1.0"?>
<package format="3">
  <name>camera_web_cpp</name>
  <version>0.1.0</version>
  <description>High-performance C++ camera to ROS2 and browser bridge.</description>
  <maintainer email="lckfb@example.local">lckfb</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
