<?xml version="1.0"?>
<package format="3">
  <name>camera_web_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 camera topic publisher and MJPEG browser bridge test package.</description>
  <maintainer email="lckfb@example.local">lckfb</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
