<?xml version="1.0"?>
<package format="3">
  <name>vision_msgs</name>
  <version>4.1.1</version>
  <description>Standard messages for vision pipelines.</description>
  <maintainer email="lckfb@example.local">lckfb</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
