<?xml version="1.0"?>
<package format="3">
  <name>yolo_web_py</name>
  <version>0.1.0</version>
  <description>Python RKNN YOLO11 MJPEG result stream.</description>
  <maintainer email="lckfb@example.local">lckfb</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
