<?xml version="1.0"?>
<package format="3">
  <name>gimbal_tracker</name>
  <version>0.1.0</version>
  <description>Dry-run-first YOLO detection to DM-H3510 gimbal tracker.</description>
  <maintainer email="lckfb@example.local">lckfb</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
