<?xml version="1.0"?>
<package format="3">
  <name>dm_h3510_ros_py</name>
  <version>0.1.0</version>
  <description>Python ROS2 driver for DM-H3510 through DAMIAO USB2CANFD and DM_DeviceSDK.</description>
  <maintainer email="lckfb@example.local">lckfb</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
